[package]
name = "panopticon"
version = "0.16.0"
authors = ["seu <seu@panopticon.re>"]

[lib]
name = "panopticon"
path = "lib/src/lib.rs"
test = true

[dependencies]
log = "0.3.6"
env_logger = "0.3"
rustc-serialize = "0.3.19"
num = "0.1.31"
tempdir = "0.3.4"
lazy_static = "0.1.16"
uuid = { version = "0.2.0", features = ["rustc-serialize", "v4"]}
flate2 = "0.2.13"
rmp-serialize = "0.8.0"
byteorder = "0.5.1"
goblin = "0.0.5"

[dependencies.graph_algos]
git = "https://github.com/flanfly/rust-graph-algos.git"
